# grapevine-rs

./: Cargo.toml  LICENSE  Makefile.toml  README.md
examples/: Cargo.toml  build.rs  order_book_publisher.rs  order_book_subscriber.rs
examples/proto/: order_book.proto
examples/src/: lib.rs  order_book.rs  proto.rs
grapevine/: Cargo.toml  README.md  build.rs
grapevine-tests/: Cargo.toml
grapevine-tests/tests/: sqlite_persistence.rs
grapevine/migrations/: 20220710155802_raw_log.sql
grapevine/proto/: grapevine.proto  recovery.proto  tree_state.proto
grapevine/src/: constants.rs  lib.rs  proto.rs  state_sync.rs  util.rs
grapevine/src/codec/: decoder.rs  encoder.rs  mod.rs
grapevine/src/persistence/: mod.rs  publisher_persistence.rs  subscriber_persistence.rs
grapevine/src/persistence/mock/: error.rs  mod.rs  publisher.rs  subscriber.rs
grapevine/src/persistence/sqlite/: error.rs  mod.rs  publisher.rs  subscriber.rs
grapevine/src/publisher/: context.rs  heartbeat.rs  mod.rs  recovery.rs  state_wrapper.rs
grapevine/src/subscriber/: aggregator.rs  message.rs  min_max_heap.rs  mod.rs  sequencer.rs  sync_status.rs
grapevine/src/transport/: mod.rs  multicast.rs
