[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[[example]]
name = "order_book_subscriber"
path = "order_book_subscriber.rs"

[[example]]
name = "order_book_publisher"
path = "order_book_publisher.rs"

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
bytes = "1"
chrono = "0.4"
grapevine = { path = "../grapevine", default-features = false, features = ["sqlite"] }
prost = "0.11"
random = "0.12"
rand = { version = "0.8", features = ["alloc"] }
rand_distr = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.6", features = ["migrate", "sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.19", features = ["sync", "time", "net", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["net", "codec"] }
tokio-stream = "0.1"
tonic = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8"
