[package]
name = "grapevine"
version = "0.1.0"
description = "A minimalistic, simple, multicast networking paradigm for distributed systems"
keywords = ["network", "multicast", "async"]
license-file = "LICENSE"
edition = "2021"
repository = "https://github.com/Justice4Joffrey/grapevine-rs/grapevine"
readme = "README.md"

[dependencies]
async-trait = "0.1"
async-stream = "0.3"
bytes = "1.1"
chrono = "0.4"
futures = "0.3"
pin-project = "1"
prost = "0.11"
socket2 = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "net", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["net", "codec"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.8"
sqlx = { version = "0.6", features = ["migrate", "sqlite", "runtime-tokio-native-tls"], optional = true }

[dev-dependencies]
anyhow = "1.0.75"
rand = { version = "0.8" }

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx"]
mocks = []

[build-dependencies]
tonic-build = "0.8"
